@@ -587,6 +587,7 @@
       <class name="test.dataprovider.issue2255.IssueTest"/>
       <class name="test.dataprovider.issue217.IssueTest"/>
       <class name="test.dataprovider.issue2267.IssueTest"/>
+      <class name="test.dataprovider.issue2327.IssueTest"/>
     </classes>
   </test>
 
